# icpd-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  pyproject.toml
docs/: architecture.md  commands.md  development.md  map.canvas  map_kevin.canvas  roadmap.md
migrations/: env.py
migrations/versions/: 20260419_0001_initial_schema.py  20260419_0002_drop_recommended_factory_target.py  20260419_0003_add_warera_party_cache.py  20260420_0004_add_guild_read_only_roles.py  20260420_0005_allow_joint_icpd_proxies.py  20260420_0006_add_cooperator_countries.py  20260421_0007_add_country_active_population.py  20260421_0008_add_hostile_proxies.py  20260421_0009_allow_any_hostile_overlord.py  20260421_0010_add_ignored_recommendation_regions.py  20260421_0011_add_ignored_recommendation_deposits.py  20260421_0012_add_alert_role_id.py  20260421_0013_add_cooperator_and_other_proxies.py  20260421_0014_seed_proxy_entries.py  20260421_0015_adjust_seed_proxy_entries.py  20260421_0016_add_proxy_active_population_alert_state.py
src/icpd_bot/: __init__.py  __main__.py
src/icpd_bot/bot/: __init__.py  app.py
src/icpd_bot/commands/: admin_config.py  country_management.py  recommendations.py  status.py  sync.py
src/icpd_bot/config/: __init__.py  settings.py
src/icpd_bot/db/: __init__.py  models.py  session.py
src/icpd_bot/services/: alerts.py  country_registry.py  guild_config.py  managed_embeds.py  (+3 more)
tests/: test_country_management.py  test_recommendations.py  test_settings.py  test_sync_command.py  test_warera_sync.py
(+4 files in other folders)
